WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110385
Crash in com.apple.WebKit2.WebProcessService at com.apple.avfoundation: __73-[AVAssetResourceLoader _attemptDelegateHandlingOfRequestWithDictionary:]_block_invoke + 51
https://bugs.webkit.org/show_bug.cgi?id=110385
Summary
Crash in com.apple.WebKit2.WebProcessService at com.apple.avfoundation: __73-...
Jer Noble
Reported
2013-02-20 14:26:20 PST
Crash in com.apple.WebKit2.WebProcessService at com.apple.avfoundation: __73-[AVAssetResourceLoader _attemptDelegateHandlingOfRequestWithDictionary:]_block_invoke + 51
Attachments
Patch
(1.83 KB, patch)
2013-02-20 14:28 PST
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2013-02-20 14:28:44 PST
Created
attachment 189381
[details]
Patch
Jer Noble
Comment 2
2013-02-20 17:11:20 PST
Committed
r143540
: <
http://trac.webkit.org/changeset/143540
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug