Crash in com.apple.WebKit2.WebProcessService at com.apple.avfoundation: __73-[AVAssetResourceLoader _attemptDelegateHandlingOfRequestWithDictionary:]_block_invoke + 51 https://bugs.webkit.org/show_bug.cgi?id=110385

Reviewed by Eric Carlson.

Ensure AVFoundation does not attempt to message a dead object by explicitly disassociating
the AVAssetResourceLoaderDelegate on MediaPlayerPrivateAVFoundationObjC destruction.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::~MediaPlayerPrivateAVFoundationObjC):

Canonical link: https://commits.webkit.org/128692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143540 268f45cc-cd09-0410-ab3c-d52691b4dbfc